feat: add draft quotation header update
